--- a/index.html
+++ b/index.html
@@ -7,13 +7,14 @@
 </head>
 <body>
 	<div>
-		<p>paragraf1</p>
-		<p>paragraf2</p>
-		<p>paragraf3</p>
-		<p>paragraf4</p>
-		<p>paragraf5</p>
-		<p>paragraf6</p>
-		<span>Span1</span>
+		<p id="p1">paragraf 1</p>
+		<p id="p2">paragraf 2</p>
+		<p id="p3">paragraf 3</p>
+		<p id="p4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quaerat illo vel, et facere quasi harum cum delectus natus alias obcaecati, vero facilis nihil itaque commodi, suscipit, quia beatae id deserunt.</p>
+		<p id="p5">paragraf 5</p>
+		<p id="p6">paragraf 6</p>
+		<span>Span 1</span><br>
+		<a href="https://google.pl">Google</a>
 	</div>
 </body>
 </html>
