--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html lang="pl">
+
 <head>
 	<meta charset="UTF-8">
 	<title>Document1</title>
-	<link rel="stylesheet" href="css/style.css">
-</head>
+	<link rel="stylesheet" href="css/style.css"> </head>
+
 <body>
 	<div>
 		<p id="p1">paragraf 1</p>
@@ -12,9 +13,8 @@
 		<p id="p3">paragraf 3</p>
 		<p id="p4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quaerat illo vel, et facere quasi harum cum delectus natus alias obcaecati, vero facilis nihil itaque commodi, suscipit, quia beatae id deserunt.</p>
 		<p id="p5">paragraf 5</p>
-		<p id="p6">paragraf 6</p>
-		<span>Span 1</span><br>
-		<a href="https://google.pl">Google</a>
-	</div>
+		<p id="p6">paragraf 6</p> <span>Span 1</span>
+		<br> <a href="https://google.pl">Google</a> </div>
 </body>
+
 </html>
