--- a/Pseudoelementy/index.html
+++ b/Pseudoelementy/index.html
@@ -11,10 +11,12 @@
 		<p id="p1">paragraf 1</p>
 		<p id="p2">paragraf 2</p>
 		<p id="p3">paragraf 3</p>
-		<p id="p4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quaerat illo vel, et facere quasi harum cum delectus natus alias obcaecati, vero facilis nihil itaque commodi, suscipit, quia beatae id deserunt.</p>
+		<p id="p4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quaerat illo vel, et facere quasi harum cum delectus natus alias obcaecati, vero facilis nihil itaque commodi, suscipit, quia beatae id deserunt.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quaerat illo vel, et facere quasi harum cum delectus natus alias obcaecati, vero facilis nihil itaque commodi, suscipit, quia beatae id deserunt.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quaerat illo vel, et facere quasi harum cum delectus natus alias obcaecati, vero facilis nihil itaque commodi, suscipit, quia beatae id deserunt.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quaerat illo vel, et facere quasi harum cum delectus natus alias obcaecati, vero facilis nihil itaque commodi, suscipit, quia beatae id deserunt.</p>
 		<p id="p5">paragraf 5</p>
-		<p id="p6">paragraf 6</p> <span>Span 1</span>
-		<br> <a href="https://google.pl">Google</a> </div>
+		<p id="p6" lang="en">paragraf 6</p> <span>Span 1</span>
+		<br> <a href="https://google.pl">Google</a>
+		<br> <a href="https://euronews.com">Euronews</a>
+		<br> <a href="#p1">P1</a> </div>
 </body>
 
 </html>
