--- a/Pseudoelementy/index.html
+++ b/Pseudoelementy/index.html
@@ -17,6 +17,23 @@
 		<br> <a href="https://google.pl">Google</a>
 		<br> <a href="https://euronews.com">Euronews</a>
 		<br> <a href="#p1">P1</a> </div>
+	<div class="tabelka">
+		<div class="klient">klient detaliczny 1</div>
+		<div class="klient">klient detaliczny 2</div>
+		<div class="klient">klient detaliczny 3</div>
+		<div class="klient">klient detaliczny 4</div>
+		<div class="klient">klient detaliczny 5</div>
+		<div class="klient">klient detaliczny 6</div>
+		<div class="klient">klient detaliczny 7</div>
+		<div class="klient">klient detaliczny 8</div>
+		<div class="klient">klient detaliczny 9</div>
+		<div class="klient">klient detaliczny 10</div>
+		<div class="klient">klient detaliczny 11</div>
+		<div class="klient">klient detaliczny 12</div>
+		<div class="klient">klient detaliczny 13</div>
+		<div class="klient">klient detaliczny 14</div>
+		<div class="klient">klient detaliczny 15</div>
+	</div>
 </body>
 
 </html>
